                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 15-10-2005 added: More DirectX exports.
 - 15-10-2005 added: Watched/UnWatched filtering in Video Library views (Thanks to MercuryInc)
 - 14-10-2005 fixed: auto region for games on dvd.
 - 14-10-2005 updated: Italian language file (Thnx to kotix)
 - 14-10-2005 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 14-10-2005 updated: German language file (Thnx to deezle)
 - 14-10-2005 updated: Norwegian language file (Thnx to vnm)
 - 14-10-2005 added: my programs bookmarks now support multiple paths defined in the true xml way, like this:
                     <bookmark>
                       <name>Games</name>
                       <path>E:\games</path>
                       <path>F:\games</path>
                     </bookmark>
 - 13-10-2005 changed: don't let PAPlayer itself decide to disable .ac3/.dts files if digital output is enabled. The player still supports the files just no passthrough. Allows user to force use of PAPlayer for .ac3/.dts files.
 - 13-10-2005 changed: Logging starts earlier (some logs weren't being logged)
 - 13-10-2005 fixed: Music files navigation, same path could be in the directoryhistory more then once in a row (causing having to press back multiple times to navigate back)
 - 13-10-2005 added: Playlists in My Music Library now act as folders.  The items are displayed in the order found in the playlist.
                     Since no tag data is read for these items yet, they are not sortable, and only displayed by filename.
 - 13-10-2005 fixed: My Music Library Playlist listing was not sortable
 - 13-10-2005 fixed: xbms shares should be working again, they are case sensitive